Changelog
=========

0.6 (unreleased)
----------------

0.5 (2010-01-26)
----------------

 * Make sure the finance workflow transition handler only tries to execute for
   sites with this product installed.
   [davisagli]

 * Fix the user_payment_info_trans_id mapping, for real this time.
   [davisagli]

 * Removed max beatbox version restriction.
   [davisagli]

0.4
---
 * Grab the processor id from the correct variable

0.3 (2009-08-03)
----------------
 * Fix shipping cost field nameing error
 * Also fix an import

0.2 (2009-08-03)
----------------
 * Do not send mapped None values to salesforce
 * Expand exception handling since beatbox raises strings.

0.1 (2009-07-22)
----------------

 * Initial import and creation derived from getpaid.SalesforcePloneFormGenAdapter
